# FFNx

./: .appveyor.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Changelog.md  LICENSE  README.md  vcpkg.json
.github/workflows/: main-1.24.3.yml
cmake/: FindBGFX.cmake  FindDENGINE.cmake  FindFFMPEG.cmake  FindVGMSTREAM.cmake  FindVPX.cmake  FindX264.cmake
docs/: readme.md
docs/ff7/: multibyte_font.md
docs/mods/: direct_mode.md
misc/: FFNx.cfg  FFNx.frag  FFNx.fxh  FFNx.hlsl  FFNx.lighting.frag  FFNx.lighting.vert  FFNx.post.psh  FFNx.post.vsh  FFNx.psh  FFNx.reg  FFNx.toml  FFNx.varying.def.sc  FFNx.vert  FFNx.vsh
misc/shaders/: main.frag  main.vert  yuv.frag
src/: CMakeLists.txt  cfg.c  cfg.cpp  cfg.h  common.c  common.cpp  common.h  common_imports.h  compile_cfg.h  config.hpp  crashHandler.hpp  crashdump.c  crashdump.cpp  crashdump.h  ctx.c  ctx.cpp  ctx.h  exe_data.cpp  externals_102_de.h  externals_102_fr.h  externals_102_sp.h  externals_102_us.h  fake_dd.c  fake_dd.cpp  fake_dd.h  ff7.h  ff7_data.h  ff7_opengl.c  ff7_opengl.cpp  ff8.h  ff8_data.cpp  ff8_data.h  ff8_opengl.c  ff8_opengl.cpp  gl.h  globals.h  lighting.cpp  lighting.h  log.c  log.cpp  (+27 more)
src/ff7/: battle.cpp  callbacks.hpp  defs.h  driver.hpp  engine.hpp  field.c  field.cpp  file.c  file.cpp  file.hpp  graphics.c  graphics.cpp  japanese_text.cpp  loaders.c  loaders.cpp  main.hpp  misc.c  misc.cpp  mode.hpp  movie.hpp  music.hpp  offsets.hpp
src/ff7/world/: camera.cpp  player.cpp  renderer.cpp  renderer.h  world.cpp  world.h
src/ff8/battle/: monsters.cpp  monsters.h
src/ffmpeg_movies/: ffmpeg_movies.c  ffmpeg_movies.cpp  ffmpeg_movies.h
src/gl/: deferred.c  deferred.cpp  gl.c  gl.cpp  llgl.cpp  llgl.h  shader.c  shader.cpp  special_case.c  special_case.cpp  texture.c  texture.cpp
src/vgmstream_music/: music.c  music.cpp  music.h
src/video/: movies.cpp
