find_package(DENGINE REQUIRED)
find_package(ZLib REQUIRED)
find_package(PNG REQUIRED)
find_package(CONFUSE REQUIRED)
find_package(FFMPEG REQUIRED)
find_package(VGMSTREAM REQUIRED)

set(RELEASE_NAME "FFNx")

# Include all the source code files
file(GLOB_RECURSE source_files "*.cpp")

add_library(${RELEASE_NAME} SHARED ${source_files})
target_include_directories(${RELEASE_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/src")
target_link_libraries(${RELEASE_NAME}
	dbghelp
	shlwapi
    psapi
    winmm
	DENGINE::DENGINE
    DENGINE::GLEW
    DENGINE::GLSLANG
    DENGINE::HLSL
    DENGINE::OGLCOMPILER
    DENGINE::OSDEPENDENT
    DENGINE::SPIRVCROSSCORE
    DENGINE::SPIRVTOOLSOPT
    DENGINE::SPIRVTOOLS
    DENGINE::SPIRV
    DENGINE::TOOLS
    DENGINE::LIBPNG
    DENGINE::LIBJPEG
    DENGINE::LIBTIFF
    DENGINE::ZLIB
	PNG::PNG
	CONFUSE::CONFUSE
	FFMPEG::AVUtil
	FFMPEG::SWResample
	FFMPEG::AVCodec
	FFMPEG::AVFormat
	FFMPEG::SWScale
	VGMSTREAM::VGMSTREAM
)
target_compile_options(${RELEASE_NAME}
    PRIVATE /DPLATFORM_WIN32
    PRIVATE /DD3D11_SUPPORTED
    PRIVATE /DD3D12_SUPPORTED
    PRIVATE /DGL_SUPPORTED
    PRIVATE /DVULKAN_SUPPORTED
	PRIVATE /D_CRT_SECURE_NO_WARNINGS
    PRIVATE /DNOMINMAX
	PRIVATE /EHsc
)
target_link_options(${RELEASE_NAME}
    PRIVATE /PDBALTPATH:${RELEASE_NAME}.pdb
    PRIVATE /DEF:${CMAKE_SOURCE_DIR}/misc/${RELEASE_NAME}.def
)
if(_DLL_VERSION)
	target_compile_options(${RELEASE_NAME} PRIVATE /DVERSION="${_DLL_VERSION}")
endif()

# INSTALL
install(TARGETS ${RELEASE_NAME} RUNTIME DESTINATION bin)
install(FILES $<TARGET_PDB_FILE:${RELEASE_NAME}> DESTINATION bin OPTIONAL)
install(FILES ../misc/${RELEASE_NAME}.cfg DESTINATION bin OPTIONAL)
install(FILES ../misc/FF7.reg DESTINATION bin OPTIONAL)
install(FILES ../misc/FF8.reg DESTINATION bin OPTIONAL)
install(FILES ../misc/eax.dll DESTINATION bin OPTIONAL)
install(FILES ../misc/${RELEASE_NAME}.fxh DESTINATION bin/shaders OPTIONAL)
install(FILES ../misc/${RELEASE_NAME}.vsh DESTINATION bin/shaders OPTIONAL)
install(FILES ../misc/${RELEASE_NAME}.psh DESTINATION bin/shaders OPTIONAL)
install(FILES ../misc/${RELEASE_NAME}.post.vsh DESTINATION bin/shaders OPTIONAL)
install(FILES ../misc/${RELEASE_NAME}.post.psh DESTINATION bin/shaders OPTIONAL)
